# media-to-ascii

./: .gitignore  README.md  requirements.txt  setup.cfg
generator/: menu.py  utilities.py
src/: media.py
src/generator/: ascii.py  main.py  media.py
src/media2ascii/: generate.py  media.py
