[metadata]
name = media-to-ascii
version = 1.0
description = A utility to generate ASCII art from an image or video.
author = Julio Salceda
license = GNU GPL
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3.9

[options]
packages =
    media2ascii
install_requires =
    certifi>=2021.10.8
    charset-normalizer>=2.0.12
    click>=8.0.4
    colorama>=0.4.4
    decorator>=4.4.2
    idna>=3.3
    imageio>=2.16.1
    imageio-ffmpeg>=0.4.5
    moviepy>=1.0.3
    numpy>=1.22.3
    opencv-python>=4.5.5.64
    Pillow>=9.0.1
    proglog>=0.1.9
    requests>=2.27.1
    tqdm>=4.63.1
    typer>=0.4.0
    urllib3>=1.26.9
python_requires = >=3.9
package_dir =
    =src
zip_safe = no
